# vine

./: .gitattributes  .gitignore  Cargo.toml  README.md  cspell.json  dprint.json  flake.nix  hi.iv  input  out.vi  prez.iv  rust-toolchain.toml  rustc-ice-2025-03-18T12_47_06-54737.txt  rustfmt.toml  style.nix
cli/: Cargo.toml  cli.nix
cli/src/: common.rs  ivm_cli.rs  ivy_cli.rs  lib.rs  vine_cli.rs
cli/src/ivy_cli/: optimize.rs  run.rs
cli/src/vine_cli/: build.rs  run.rs
lsp/: Cargo.toml  grammars.nix  package-lock.json
lsp/client/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
lsp/client/src/: extension.js  extension.ts  ivy-config.json  ivy-grammar.json  vine-config.json  vine-grammar.json
lsp/src/: lib.rs  main.rs
lsp/tree-sitter-ivy/: grammar.js  package-lock.json  package.json  test.nu  tree-sitter.json
lsp/tree-sitter-ivy/queries/: highlights.scm  injections.scm  textobjects.scm
lsp/tree-sitter-vine/: .gitignore  grammar.js  package-lock.json  package.json  test.nu  tree-sitter.json
lsp/tree-sitter-vine/queries/: highlights.scm  injections.scm  textobjects.scm
vine/: Cargo.toml  test.vi
vine/examples/: break_return.vi  cat.vi  fib.vi  fib_repl.vi  fizzbuzz.vi  foo.vi  graph_bench.vi  guessing_game.vi  hello_world.vi  loop.vi  mandelbrot.vi  mandelbrot_sixel.vi  mandelbrot_tga.vi  null_return.vi  prime_or_perfect.vi  primeness.vi  primes.vi  result.vi  sort.vi  stream_primes.vi  sub_min.vi  sum_divisors.vi  test.vi
vine/programs/: fib.vi  fizzbuzz.vi  hello_world.vi  mandelbrot.vi  mandelbrot_tga.vi
vine/src/: analyzer.rs  ast.rs  backend.rs  chart.rs  charter.rs  checker.rs  compile.rs  compiler.rs  components.rs  core.rs  desugar.rs  diag.rs  distiller.rs  emitter.rs  features.rs  finder.rs  fmt.rs  lexer.rs  lib.rs  loader.rs  main.rs  normalizer.rs  parser.rs  repl.rs  resolve.rs  resolver.rs  signatures.rs  specializer.rs  structures.rs  tir.rs  tools.rs  type_chart.rs  types.rs  unifier.rs  validate.rs  vir.rs  visit.rs
vine/src/analyzer/: usage.rs
vine/src/chart/: checkpoint.rs
vine/src/checker/: check_expr.rs  check_pat.rs  display_type.rs  resolve_path.rs  typeof_def.rs  unify.rs
vine/src/compile/: build_stages.rs  finish_nets.rs  finish_stages.rs  fix_interstage_wires.rs  infer_interfaces.rs  net_builder.rs
vine/src/components/: analyzer.rs  charter.rs  distiller.rs  emitter.rs  finder.rs  lexer.rs  loader.rs  matcher.rs  normalizer.rs  parser.rs  resolver.rs  specializer.rs  synthesizer.rs
vine/src/distiller/: control_flow.rs  ext.rs  pattern_matching.rs
vine/src/emitter/: build_stages.rs  finish_stages.rs  fix_interstage_wires.rs  infer_interfaces.rs  net_builder.rs
vine/src/emitter_old/: fix_interstage_wires.rs  net_builder.rs
vine/src/features/: annotation.rs  assert.rs  bench.rs  block.rs  builtin.rs  cast.rs  cfg.rs  coerce.rs  composite.rs  condition.rs  const_.rs  debug.rs  do_.rs  enum_.rs  flex.rs  fn_.rs  for_.rs  fork_drop.rs  generics.rs  hole.rs  if_.rs  impl_.rs  import.rs  index.rs  inline_ivy.rs  inverse.rs  labels.rs  let_.rs  list.rs  local.rs  loop_.rs  match_.rs  method.rs  mod_.rs  numeric.rs  object.rs  ops.rs  path.rs  place.rs  range.rs  (+10 more)
vine/src/fmt/: doc.rs
vine/src/parser/: parse_string.rs
vine/src/resolve/: build_graph.rs  prelude.rs  resolve_defs.rs  resolve_exprs.rs  resolve_items.rs  resolve_path.rs  resolve_terms.rs
vine/src/resolver/: build_graph.rs  resolve_defs.rs  resolve_expr.rs  resolve_pat.rs  resolve_path.rs
vine/src/structures/: ast.rs  (+14 more)
vine/std/: File.vi  IO.vi  array.vi  bool.vi  char.vi  derive.vi  f32.vi  hint.vi  io.vi  list.vi  map.vi  n32.vi  n64.vi  option.vi  prelude.vi  result.vi  rng.vi  std.vi  str.vi  tuple.vi  u32.vi  u64.vi  unsafe.vi  util.vi
(+1129 files in other folders)
