[package]
name = "vine-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive", "env"] }
clap_complete = "4.5.52"
glob = "0.3.3"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
rustyline = "14.0.0"

ivm = { path = "../ivm" }
ivy = { path = "../ivy" }
vine = { path = "../vine", optional = true }
vine-lsp = { path = "../lsp", optional = true }
vine-util = { path = "../util" }

[lints.clippy]
absolute_paths = "warn"

[features]
vine = ["dep:vine", "dep:vine-lsp"]
default = ["vine"]

[[bin]]
name = "vine"
required-features = ["vine"]
