[package]
name = "vine-lsp"
version = "0.0.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
glob = "0.3.1"
tower-lsp = "0.20.0"
vine = { path = "../vine" }
vine-util = { path = "../util" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.41.1", default-features = false, features = ["rt", "macros", "sync"] }

[lints.clippy]
absolute_paths = "warn"
