[package]
name = "vine"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
class = { rev = "99738e6", git = "https://github.com/tjjfvi/class" }
loaned = "0.1.2"
logos = "0.14.0"
slab = "0.4.9"

ivm = { path = "../ivm" }
ivy = { path = "../ivy" }
vine-util = { path = "../util" }

[lints]
workspace = true
