[package]
name = "vine"
version = "0.0.0"
edition = "2024"

[dependencies]
class = { rev = "99738e6", git = "https://github.com/tjjfvi/class" }
unicode-id-start = "1.4.0"

ivm = { path = "../ivm" }
ivy = { path = "../ivy" }
vine-util = { path = "../util" }

[lints.clippy]
absolute_paths = "warn"
large_enum_variant = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
